--- a/12.11.21/libft/Makefile
+++ b/12.11.21/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: fkenned <marvin@42.fr>                     +#+  +:+       +#+         #
+#    By: fkenned <fkenned@student.21-school.ru>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/04/26 17:38:29 by fkenned           #+#    #+#              #
-#    Updated: 2021/04/26 17:38:30 by fkenned          ###   ########.fr        #
+#    Updated: 2021/11/12 18:11:44 by fkenned          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -57,6 +57,8 @@ B_SRCS	=	ft_lstnew.c		\
 
 OBJS	=	${SRCS:.c=.o}
 
+L_HEAD	=	libft.h
+
 B_OBJS	=	${B_SRCS:.c=.o}
 
 NAME	=	libft.a
@@ -64,10 +66,10 @@ RM		=	rm -f
 CC		=	gcc
 CFLAGS	=	-Wall -Wextra -Werror
 
-.c.o:
+%.o: %.c	${L_HEAD}
 			${CC} ${CFLAGS} -c $< -o ${<:.c=.o}
 
-${NAME}:	${OBJS} libft.h
+${NAME}:	${OBJS}
 			ar rc ${NAME} ${OBJS}
 			ranlib ${NAME}
 
